--- a/services.html
+++ b/services.html
@@ -53,8 +53,8 @@
           <li><a href="about.html">About</a></li>
           <li><a href="#services">Services</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="#pricing">Pricing</a></li>
-          <li><a href="#team">Team</a></li>
+          <li><a href="pricing.html">Pricing</a></li>
+          <li><a href="team.html">Team</a></li>
           <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="#">Dropdown 1</a></li>
